--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm"
   },
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
-    "react-navigation": "^1.2.0"
+    "react-navigation": "^1.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
