--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-navigation": "^1.2.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
